feat: logos + banner

--- a/ABM.Paie/wwwroot/index.html
+++ b/ABM.Paie/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ABM.Paie</title>
     <base href="/" />
+    <link rel="icon" type="image/x-icon" href="/images/logos/abm-paie_fav.png" />
     <link rel="stylesheet" href="css/app.css" />
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="ABM.Paie.styles.css" rel="stylesheet" /> -->
