refacto: NavAction to Operation

--- a/ABM.Paie.Formation/wwwroot/index.html
+++ b/ABM.Paie.Formation/wwwroot/index.html
@@ -11,6 +11,7 @@
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="ABM.Paie.Formation.styles.css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="_content/Common/css/Common.css">
+    <link rel="stylesheet" href="_content/Common/css/Spacing.css">
     <link rel="stylesheet" href="_content/Common/Common.bundle.scp.css">
 </head>
 
