--- a/ABM.Paie.Formation/wwwroot/index.html
+++ b/ABM.Paie.Formation/wwwroot/index.html
@@ -8,8 +8,7 @@
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="/logos/abm-paie/abm-paie_fav_v2.svg" />
     <link rel="stylesheet" href="css/app.css" />
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="ABM.Paie.Formation.styles.css" rel="stylesheet" /> -->
+    <link rel="stylesheet" href="ABM.Paie.Formation.styles.css" />
     <link rel="stylesheet" href="_content/Common/css/Common.css">
     <link rel="stylesheet" href="_content/Common/css/Spacing.css">
     <link rel="stylesheet" href="_content/Common/Common.bundle.scp.css">
